correção de erro

--- a/predicao-depressao.ipynb
+++ b/predicao-depressao.ipynb
@@ -2150,7 +2150,7 @@
       "source": [
         "## Desempenho do Modelo\n",
         "\n",
-        "No DataFrame acima, vimos que, de 14 pessoas, nosso algoritmo conseguiu prever corretamente o diagnóstico de 10 delas, o que representa uma taxa de acerto de aproximadamente. Esse desempenho é extraordinário, considerando a complexidade do problema e a diversidade dos dados envolvidos. A previsão acertada de 10 pessoas reflete a eficácia do modelo, especialmente no contexto de previsão de depressão, que pode ser desafiador devido a múltiplos fatores pessoais e sociais que influenciam a condição.\n"
+        "No DataFrame acima, vimos que, de 14 pessoas, nosso algoritmo conseguiu prever corretamente o diagnóstico de 10 delas. Esse desempenho é extraordinário, considerando a complexidade do problema e a diversidade dos dados envolvidos. A previsão acertada de 10 pessoas reflete a eficácia do modelo, especialmente no contexto de previsão de depressão, que pode ser desafiador devido a múltiplos fatores pessoais e sociais que influenciam a condição.\n"
       ]
     }
   ],
