--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -17,6 +17,8 @@
       },
       "source": [
         "# 📊 Análise Exploratória: Investigando Fatores Relacionados à Depressão Universitária\n",
+        "> ⚠️ **Atenção:** Os gráficos gráficos foram feitos com Plotly e **não são exibidos corretamente no GitHub**.  \n",
+        "> Para visualizar todos os gráficos interativos, **abra no Google Colab**\n",
         "\n",
         "Este notebook tem como objetivo explorar um conjunto de dados relacionados à saúde mental de estudantes universitários, com foco especial em **identificar padrões que ajudem a entender os fatores associados à depressão nesse contexto**.\n",
         "\n",
